--- a/style.css
+++ b/style.css
@@ -1,270 +1,212 @@
 @font-face {
-    font-family: starwarsfont;
-    src: url(starjedi/Starjedi.ttf);
-}
+  font-family: starwarsfont;
+  src: url(starjedi/Starjedi.ttf); }
 
 @font-face {
-    font-family: starwarsfont2;
-    src: url(starwarsfont2/DeathStar.otf);
-}
-
-
+  font-family: starwarsfont2;
+  src: url(starwarsfont2/DeathStar.otf); }
 
 *,
 *:before,
 *:after {
-    box-sizing: content-box;
-}
+  box-sizing: content-box; }
 
 html {
-    height: 100vh;
-    font-family: starwarsfont2;
-    line-height: 1.5;
-}
+  height: 100vh;
+  font-family: starwarsfont2;
+  line-height: 1.5; }
 
 body {
-    color: white;
-    text-shadow: 2px 2px rgba(75, 213, 238, 0.1);
-    background-color: lightgray;
-    display: flex;
-    flex-direction: column;
-    margin: 0;
-    height: 100vh;
-    background-image: url("background.gif");
-    background-attachment: fixed;
-}
+  color: white;
+  text-shadow: 2px 2px rgba(75, 213, 238, 0.1);
+  background-color: lightgray;
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  height: 100vh;
+  background-image: url("background.gif");
+  background-attachment: fixed; }
+  body > header,
+  body > footer {
+    padding: 0.1rem 0.1rem 0.1rem 1rem; }
+  body > header {
+    border-bottom: 3px solid #e5b13a; }
+  body > footer {
+    border-top: 3px solid #e5b13a; }
 
 a,
-a:link,
-{
-    color: rgba(75, 213, 238, .1);
-    text-shadow: 1px 1px rgba(0, 0, 0, 0.5);
-}
-
+a:link {
+  color: rgba(75, 213, 238, 0.1);
+  text-shadow: 1px 1px rgba(0, 0, 0, 0.5); }
 
 a:hover,
 a:visited,
 button {
-    color: rgba(75, 213, 238, .1);
-    text-shadow: 2px 2px rgba(75, 213, 238, 1);
-    text-decoration: none;
-    cursor: pointer;
-}
+  color: rgba(75, 213, 238, 0.1);
+  text-shadow: 2px 2px #4bd5ee;
+  text-decoration: none;
+  cursor: pointer; }
 
 h1,
 h2,
 h3 {
-    margin: 0.1rem;
-    font-weight: bold;
-}
+  margin: 0.1rem;
+  font-weight: bold; }
 
 header,
 footer {
-    color: black;
-    background-color: lightgray;
-    text-shadow: 2px 2px rgba(75, 213, 238, 0.8);
-}
+  color: black;
+  background-color: lightgray;
+  text-shadow: 2px 2px rgba(75, 213, 238, 0.8); }
 
 header h1 {
-    display: inline-block;
-}
+  display: inline-block; }
 
 header nav {
-    width: 50%;
-    display: inline-block;
-    position: absolute;
-}
-
-header nav ul li {
+  width: 50%;
+  display: inline-block;
+  position: absolute; }
+  header nav ul li {
     display: inline-block;
     list-style-type: none;
-    margin-right: 1rem;
-}
-
-header nav ul li a,
-footer a {
-    color: black;
-}
-
-
-body>header,
-body>footer {
-    padding-left: 1rem;
-    padding-right: 0.1rem;
-}
-
-body>header,
-body>footer {
-    padding-top: 0.1rem;
-    padding-bottom: 0.1rem;
-}
-
-body>header {
-    border-bottom: 3px solid rgba(229, 177, 58, 1);
-}
+    margin-right: 1rem; }
+    header nav ul li a {
+      color: black; }
 
 main {
-    flex-grow: 1;
-    overflow: auto;
-}
+  flex-grow: 1;
+  overflow: auto; }
+  main nav {
+    margin: 0 auto;
+    width: 100vw;
+    display: inline-block;
+    text-align: center; }
+    main nav .previous,
+    main nav .next {
+      font-family: starwarsfont2;
+      line-height: 1.5;
+      width: 10%;
+      padding: 0.5rem 1rem;
+      margin: 1.5rem 1.5rem 0rem 1.5rem;
+      background: rgba(0, 255, 255, 0.5);
+      border: 1px solid #e5b13a;
+      border-radius: 0.5rem;
+      font-size: 1em;
+      text-shadow: 2px 2px rgba(0, 0, 0, 0.5);
+      color: white;
+      font-size: 1.2rem; }
 
 #container {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-
-body>footer {
-    border-top: 3px solid rgba(229, 177, 58, 1);
-}
-
-#container>section {
+  display: flex;
+  flex-wrap: wrap; }
+  #container > section {
     width: calc(50vw - 3.6rem);
     margin: 1.5rem;
     background-color: rgba(0, 0, 0, 0.7);
-    border: 1px solid rgba(229, 177, 58, 1);
+    border: 1px solid #e5b13a;
     border-radius: 0.5rem;
-    overflow: hidden;
-}
+    overflow: hidden; }
+    #container > section > header,
+    #container > section > div {
+      padding: 0.1rem 1rem; }
+    #container > section > header {
+      border-bottom: 3px solid #e5b13a; }
+    #container > section ul {
+      padding: 3rem; }
 
-#container>section>header,
-#container>section>div {
-    padding: 0.1rem 1rem;
-}
+#container > section li {
+  list-style-type: none;
+  display: flex;
+  padding: 0.2rem; }
 
-#container>section>header {
-    border-bottom: 3px solid rgba(229, 177, 58, 1);
-}
+#container > section .label {
+  flex-grow: 1;
+  width: 20vw; }
 
-#container>section ul {
-    padding: 3rem;
-}
+#container > section .gender {
+  color: gray; }
 
-#container>section li {
-    list-style-type: none;
-    display: flex;
-    padding: 0.2rem;
-}
+#container > section .value {
+  color: #4bd5ee; }
 
-#container>section .label {
-    flex-grow: 1;
-    width: 20vw;
-}
-
-#container>section .gender {
-    color: gray;
-}
-
-#container>section .value {
-    color: rgba(75, 213, 238, 1);
-}
-
-#container>section button {
-    font-family: starwarsfont2;
-    line-height: 1.5;
-    padding: 0.2rem 1rem;
-    margin: 0.5rem .5rem 0rem 1rem;
-    background: rgba(75, 213, 238, 0.8);
-    border: 1px solid rgba(229, 177, 58, 1);
-    border-radius: 0.5rem;
-    font-size: 1em;
-    text-shadow: 2px 2px rgba(0, 0, 0, 0.5);
-    color: white;
-}
+#container > section button {
+  font-family: starwarsfont2;
+  line-height: 1.5;
+  padding: 0.2rem 1rem;
+  margin: 0.5rem .5rem 0rem 1rem;
+  background: rgba(75, 213, 238, 0.8);
+  border: 1px solid #e5b13a;
+  border-radius: 0.5rem;
+  font-size: 1em;
+  text-shadow: 2px 2px rgba(0, 0, 0, 0.5);
+  color: white; }
 
 @keyframes left-right {
-    from {
-        right: 0vw;
-    }
-    to {
-        right: 100vw;
-    }
-}
+  from {
+    right: 0vw; }
+  to {
+    right: 100vw; } }
 
 @keyframes opacity {
-    0% {
-        opacity: 0;
-    }
-    10% {
-        opacity: 1;
-    }
-    45% {
-        opacity: 1;
-    }
-    52% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 0;
-    }
-}
+  0% {
+    opacity: 0; }
+  10% {
+    opacity: 1; }
+  45% {
+    opacity: 1; }
+  52% {
+    opacity: 0; }
+  100% {
+    opacity: 0; } }
 
 #falcon {
-    position: absolute;
-    z-index: 1;
-    top:0rem;
-    right: 0rem;
-    opacity: .9;
-    width: 120px;
-    height: 90px;
-    background: url(mileniumfalcon.png) no-repeat;
-    background-size: 5rem;
-    animation: left-right 7s infinite ease-in-out, opacity 7s infinite linear;
-}
-
-
-
-
-
-
-
+  position: absolute;
+  z-index: 1;
+  top: 0rem;
+  right: 0rem;
+  opacity: .9;
+  width: 120px;
+  height: 90px;
+  background: url(mileniumfalcon.png) no-repeat;
+  background-size: 5rem;
+  animation: left-right 7s infinite ease-in-out, opacity 7s infinite linear; }
 
 /* -------------------------------- */
+.modal,
+.modal > .underlay,
+.modal > .body {
+  position: absolute; }
 
 .modal,
-.modal>.underlay,
-.modal>.body {
-    position: absolute;
-}
-
-.modal,
-.modal>.underlay {
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-}
+.modal > .underlay {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%; }
 
 .modal {
-    height: 0;
-    z-index: 10;
-    overflow: hidden;
-    transition: height 300ms ease;
-}
+  height: 0;
+  z-index: 10;
+  overflow: hidden;
+  transition: height 300ms ease; }
 
 .modal.open {
-    height: 100%;
-}
+  height: 100%; }
 
-.modal>.underlay {
-    z-index: 10;
-    background-color: rgba(255, 255, 255, 0.7);
-}
+.modal > .underlay {
+  z-index: 10;
+  background-color: rgba(255, 255, 255, 0.7); }
 
-
-.modal>.body {
-    position: relative;
-    top: 20rem;
-    left: 25vw;
-    z-index: 15;
-    width: 50vw;
-}
+.modal > .body {
+  position: relative;
+  top: 20rem;
+  left: 25vw;
+  z-index: 15;
+  width: 50vw; }
 
 .modal .controls {
-    z-index: 20;
-}
-
-.modal .controls button {
+  z-index: 20; }
+  .modal .controls button {
     font-family: starwarsfont2;
     line-height: 1.5;
     margin-bottom: -0.3rem;
@@ -274,49 +216,22 @@ body>footer {
     font-size: 1.25em;
     background-color: rgba(0, 255, 255, 0.5);
     color: white;
-    text-shadow: 2px 2px rgba(0, 0, 0, 0.5);
-}
-
-.modal .content h1 {
-    padding: 0rem 3rem;
-    font-size: 30px;
-    border: 1px solid rgba(229, 177, 58, 1);
-    border-top: none;
-    border-right: none;
-    border-bottom: 3px solid rgba(229, 177, 58, 1);
-}
+    text-shadow: 2px 2px rgba(0, 0, 0, 0.5); }
 
 .modal .content {
-    border: 1px solid rgba(229, 177, 58, 1);
-    border-bottom: 3px solid rgba(229, 177, 58, 1);
-    padding: 0.5rem 3rem;
-    z-index: 17;
-    background-color: lightgray;
-    color: black;
-    text-shadow: 2px 2px rgba(0, 255, 255, 0.5);
-    box-shadow: 5px 5px 5px #888888;
-    border-radius: 2rem;
-}
-
-main nav {
-    margin: 0 auto;
-    width: 100vw;
-    display: inline-block;
-    text-align: center;
-}
-
-main nav .previous,
-main nav .next {
-    font-family: starwarsfont2;
-    line-height: 1.5;
-    width: 10%;
-    padding: 0.5rem 1rem;
-    margin: 1.5rem 1.5rem 0rem 1.5rem;
-    background: rgba(0, 255, 255, 0.5);
-    border: 1px solid rgba(229, 177, 58, 1);
-    border-radius: 0.5rem;
-    font-size: 1em;
-    text-shadow: 2px 2px rgba(0, 0, 0, 0.5);
-    color: white;
-    font-size: 1.2rem
-}
+  border: 1px solid #e5b13a;
+  border-bottom: 3px solid #e5b13a;
+  padding: 0.5rem 3rem;
+  z-index: 17;
+  background-color: lightgray;
+  color: black;
+  text-shadow: 2px 2px rgba(0, 255, 255, 0.5);
+  box-shadow: 5px 5px 5px #888888;
+  border-radius: 2rem; }
+  .modal .content h1 {
+    padding: 0rem 3rem;
+    font-size: 30px;
+    border: 1px solid #e5b13a;
+    border-top: none;
+    border-right: none;
+    border-bottom: 3px solid #e5b13a; }
